docs: 完善README，写入完整需求规格
- 功能需求 F1/F2/F3 详细说明
- 激光器属性报文 0x2410 字段布局
- 巡检采集完整流程
- SDK接入方式与关键注意事项
- 实施顺序 M1~M5